# asistentelegalosiptel

./: .replit  app.py  main.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--Environment-updated-Reloading-shell-2025-04-19-23-35-50-408-WARNING-streamlit-runtime-scriptru-1745105800003.txt  Pasted--Environment-updated-Reloading-shell-2025-04-19-23-49-20-031-WARNING-streamlit-runtime-scriptru-1745106588266.txt
indice_osiptel/: index.faiss  index.pkl
