
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "openai",
    "PyPDF2",
    "langchain",
    "faiss-cpu",
    "langchain-community>=0.3.21",
    "tiktoken>=0.9.0",
    "langchain-openai>=0.3.14",
]
